src/styles/stdtheme.less
@font-face {
    font-family: 'montserrathairline';
    src: url('../res/fonts/montserrat-hairline-webfont/montserrat-hairline-webfont.eot');
    src: url('../res/fonts/montserrat-hairline-webfont/montserrat-hairline-webfont.eot?#iefix') format('embedded-opentype'),
         url('../res/fonts/montserrat-hairline-webfont/montserrat-hairline-webfont.woff2') format('woff2'),
         url('../res/fonts/montserrat-hairline-webfont/montserrat-hairline-webfont.woff') format('woff'),
         url('../res/fonts/montserrat-hairline-webfont/montserrat-hairline-webfont.ttf') format('truetype'),
         url('../res/fonts/montserrat-hairline-webfont/montserrat-hairline-webfont.svg#montserrathairline') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
    background-color: #333;
    color: #fafafa;
}

.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

div.header {
    padding: 8px 16px;
    font-family: 'montserrathairline';
    font-size: 32px;
}

.mae-button-hover() {
    cursor: pointer;
    color: black;
    background-color: #fafafa;
    border-radius: 8px;
}
div.mae-button {
    text-align: center;
}
div.mae-button:hover {
    .mae-button-hover();
}
div.mae-button:active {
    .mae-button-hover();
    background-color: #ccc;
}

div.mae-logo {
    text-align: right;
    cursor: default;
}

